<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg_grad">

    <TextView
        android:id="@+id/topTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topsubTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_sub_name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTitle2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/select_mode"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/button_linear"
        android:layout_width="305dp"
        android:layout_height="473dp"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/ad_hoc_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_grad_button"
            android:text="@string/button_ad_hoc"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dip" />

        <Button
            android:id="@+id/party_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_grad_button"
            android:text="@string/button_party"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dip" />

        <Button
            android:id="@+id/table_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_grad_button"
            android:text="@string/button_table_talk"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dip" />

        <Button
            android:id="@+id/class_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_grad_button"
            android:text="@string/button_class_room"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dip" />


        <ListView
            android:id="@+id/name_list"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:choiceMode="singleChoice"
            android:textAlignment="center"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>